--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -4224,6 +4224,10 @@ ul.verticle_bars li {
 /** bootstrap-progressbar  **/
 
 /** PNotify **/
+.alert-text-black {
+  color: black !important;
+}
+
 .alert-success {
   color: #ffffff;
   background-color: rgba(38, 185, 154, 0.88);
